--- a/templates/Vinculation/account.html.twig
+++ b/templates/Vinculation/account.html.twig
@@ -10,7 +10,7 @@
 <div class="cuentas"></div>
 
 <a href="{{ path('perfil') }}"><button class="pill" type="button"><i class="fal fa-arrow-alt-to-left icono-vincularr"></i> Volver a mi perfil </button></a>
-<script src="{{ asset('/js/vinculation_account.js') }}"> </script>
+<script src="{{ asset('/js/Vinculacion/vinculation_account.js') }}"> </script>
 <link rel="stylesheet" href="{{ asset('/css/Others_Css/estilos_vinculation_acount.css') }}">
 </body>
 </html>
