--- a/templates/Vinculation/stream.html.twig
+++ b/templates/Vinculation/stream.html.twig
@@ -10,7 +10,7 @@
 <div class="plataformas"></div>
 
 <a href="{{ path('perfil') }}"><button class="pill" type="button"> <i class="fal fa-arrow-alt-to-left icono-vincular"></i> Volver a mi perfil </button></a>
-<script src="{{ asset('/js/vinculation_stream.js') }}"> </script>
+<script src="{{ asset('/js/Vinculacion/vinculation_stream.js') }}"> </script>
 <link rel="stylesheet" href="{{ asset('/css/Others_Css/estilos_vinculation_stream.css') }}">
 </body>
 </html>
