--- a/templates/contact/chat.html.twig
+++ b/templates/contact/chat.html.twig
@@ -1,8 +1,18 @@
 {% extends 'base.html.twig' %}
 {% block title %}Contacto 📲 {% endblock %}
 {% block body %}
-    <body id="body-chat">
-
+    <body id="fondo-comunidad">
+    <div class="container-fluid mb-5 ">
+        <div class="row justify-content-center row-futuro">
+            <div class="col-7">
+                <div class="tarjeta-futuro shadow-lg p-3 mb-5 bg-white rounded">
+                    <h5 class="texto-no-torneos text-white"> 🚧 PRÓXIMAMENTE EN LA VERSIÓN 1.3... 🛠️</h5>
+                    <div class="card-body">
+                        <h5 class="card-title texto-profile-ver text-white">Un chat en línea para solucionar los problemas rapidamente.</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     </body>
-
 {% endblock %}
