--- a/templates/cosmeticos/cosmeticos.html.twig
+++ b/templates/cosmeticos/cosmeticos.html.twig
@@ -12,6 +12,10 @@
                             <p>
                                 Esta es la pestaña de cosméticos, en ella podrás encontrar todo lo que hay actualmente en el juego y buscar lo que quieras. En una versión próxima se aplicarán  filtros de búsqueda avanzados… ¡ A navegar !
                             </p>
+                            <form class="d-flex">
+                                <input class="form-control me-2" type="search" placeholder="Buscar por nombre..." aria-label="Search">
+                                <button class="btn btn-outline-danger buscar-cosmetico-boton" type="submit">Buscar</button>
+                            </form>
                         </div>
                         <div class="col-2"></div>
                     </div>
@@ -19,11 +23,9 @@
                 <div class="col-1"></div>
             </div>
     </div>
-
                 <div class="container-fluid">
                     <div id="content" class="row">
 
                     </div>
                 </div>
-
 {% endblock %}
