--- a/templates/tienda/tienda.html.twig
+++ b/templates/tienda/tienda.html.twig
@@ -1,5 +1,27 @@
 {% extends 'base.html.twig' %}
 {% block title %}Tienda 💲 {% endblock %}
 {% block body %}
+    <div class="container-fluid">
+        <div class="col-12 d-flex flex-column flex-lg-row">
+            <div class="col-1"></div>
+            <div class="col-10">
+                <h1 class="titulo-cosmeticos"> TIENDA </h1>
+                <div class="col-12 d-flex flex-column flex-lg-row text-center">
+                    <div class="col-2"></div>
+                    <div class="col-8">
+                        <p>
+                            Esta es la pestaña de la tienda, puedes comprar lo que quieras pero ten en cuenta que cada 24 horas se actualiza. Corre y compra algo para lucirlo en el juego
+                        </p>
+                    </div>
+                    <div class="col-2"></div>
+                </div>
+            </div>
+            <div class="col-1"></div>
+        </div>
+    </div>
+
+
+
+
 
 {% endblock %}
