--- a/templates/torneo/win.html.twig
+++ b/templates/torneo/win.html.twig
@@ -4,7 +4,7 @@
     <div class="container-fluid mt-1">
         <div class="row justify-content-center mt-1 mb-3  card-win">
             <div class="col-5 mt-5">
-                <div class="card shadow-lg p-3 mb-5rounded">
+                <div class="card-blanca shadow-lg p-3 mb-5rounded">
                     <div class="card-header text-center texto-no-torneos">
                         ASIGNAR GANADOR 🏆
                     </div>
