--- a/templates/usuario/edit.html.twig
+++ b/templates/usuario/edit.html.twig
@@ -5,7 +5,7 @@
 <div class="container-fluid mt-1">
     <div class="row justify-content-center mt-1 mb-3">
         <div class="col-5 mt-5">
-            <div class="card">
+            <div class="card-blanca">
                 <div class="card-header text-center texto-no-torneos">
                     EDITAR USUARIO
                 </div>
