--- a/templates/Others/comunidad.html.twig
+++ b/templates/Others/comunidad.html.twig
@@ -1,9 +1,10 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-    <div class="container-fluid ">
+    <body id="fondo-comunidad">
+    <div class="container-fluid mb-5 ">
         <div class="row justify-content-center row-futuro">
             <div class="col-7">
-                <div class="card tarjeta-futuro shadow-lg p-3 mb-5 bg-white rounded">
+                <div class="tarjeta-futuro shadow-lg p-3 mb-5 bg-white rounded">
                     <h5 class="texto-no-torneos text-white"> 🚧 PRÓXIMAMENTE EN LA VERSIÓN 1.0... 🛠️</h5>
                     <div class="card-body">
                         <h5 class="card-title texto-profile-ver text-white">Un foro donde la gente puede compartir sus mejores jugadas y ser puntuadas por otras personas. </h5>
@@ -12,4 +13,5 @@
             </div>
         </div>
     </div>
+    </body>
 {% endblock %}
