--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,9 +27,13 @@
         <link rel="stylesheet" href="{{ asset('/css/grids/grid.css') }}">
     {% endblock %}
     {% block javascripts %}
+        <script src="{{ asset('/js/chat.js') }}"></script>
         <script src="{{ asset('/js/stats.js') }}"></script>
         <script src="{{ asset('/js/config.js') }}"></script>
-        <script src="{{ asset('/js/cosmeticos.js') }}"></script>
+        <script src="{{ asset('/js/Cosmeticos/cosmeticos.js') }}"></script>
+        <script src="{{ asset('/js/Cosmeticos/cosmetico.js') }}"></script>
+
+
     {% endblock %}
 </head>
 <header>
