--- a/templates/contact/chat.html.twig
+++ b/templates/contact/chat.html.twig
@@ -1,18 +1,124 @@
 {% extends 'base.html.twig' %}
-{% block title %}Contacto 📲 {% endblock %}
+{% block title %}Chat 📲 {% endblock %}
 {% block body %}
-    <body id="fondo-comunidad">
-    <div class="container-fluid mb-5 ">
-        <div class="row justify-content-center row-futuro">
-            <div class="col-7">
-                <div class="tarjeta-futuro shadow-lg p-3 mb-5 bg-white rounded">
-                    <h5 class="texto-no-torneos text-white"> 🚧 PRÓXIMAMENTE EN LA VERSIÓN 1.3... 🛠️</h5>
-                    <div class="card-body">
-                        <h5 class="card-title texto-profile-ver text-white">Un chat en línea para solucionar los problemas rapidamente.</h5>
-                    </div>
+<body id="body-chat">
+<div class="container-fluid">
+    <div class="row row-chat">
+        <div class="col-6 d-flex flex-column flex-lg-row ">
+            <div class="chat">
+                <div class="chat-title">
+                    <h1>TORNEIND</h1>
+                    <h2>soporte</h2>
+                    <figure class="avatar">
+                        <img height="50px" src="{{ asset('/logos/sin-fondo.png') }}" />
+                    </figure>
+                </div>
+                <div class="messages">
+                    <div class="messages-content"></div>
+                </div>
+                <div class="message-box">
+                    <textarea type="text" class="message-input" placeholder="Escribe el mensaje..."></textarea>
+                    <button type="submit" class="message-submit">Envíar</button>
                 </div>
             </div>
         </div>
     </div>
-    </body>
+</div>
+</body>
+    <script>
+        var $messages = $(".messages-content"),
+            d,
+            h,
+            m,
+            i = 0;
+
+        $(window).load(function() {
+            $messages.mCustomScrollbar();
+            setTimeout(function() {
+                fakeMessage();
+            }, 100);
+        });
+
+        function updateScrollbar() {
+            $messages.mCustomScrollbar("update").mCustomScrollbar("scrollTo", "bottom", {
+                scrollInertia: 10,
+                timeout: 0
+            });
+        }
+
+        function setDate() {
+            d = new Date();
+            if (m != d.getMinutes()) {
+                m = d.getMinutes();
+                $('<div class="timestamp">' + d.getHours() + ":" + m + "</div>").appendTo(
+                    $(".message:last")
+                );
+            }
+        }
+
+        function insertMessage() {
+            msg = $(".message-input").val();
+            if ($.trim(msg) == "") {
+                return false;
+            }
+            $('<div class="message message-personal">' + msg + "</div>")
+                .appendTo($(".mCSB_container"))
+                .addClass("new");
+            setDate();
+            $(".message-input").val(null);
+            updateScrollbar();
+            setTimeout(function() {
+                fakeMessage();
+            }, 1000 + Math.random() * 20 * 100);
+        }
+
+        $(".message-submit").click(function() {
+            insertMessage();
+        });
+
+        $(window).on("keydown", function(e) {
+            if (e.which == 13) {
+                insertMessage();
+                return false;
+            }
+        });
+
+        var Fake = [
+            "¡ Hola Jugador ! Mi nombre es Marc Miralles y voy a ser la persona encargada de ayudarte hoy. Cúentame tu problema :)",
+            "Entiendo, antes que nada necesito saber que eres tu el propietario de la cuenta y para ello necesito que me digas el último torneo que has jugado ",
+            "Lo siento, no exsiste un torneo con ese nombre.",
+            "No… ese no es.",
+            "Ahora si :) ! Esta bien, veo que en tu perfil hay una falla de vinculación de cuentas. ¿ Deseas quitar las cuentas y volverás a vincular ?",
+            "Perdóneme pero el lenguaje malsonante no esta permitido en Torneind usar este puede llevar a cabo la suspensión de la cuenta.",
+            "Perfecto, quiere abandonar el chat ?",
+            "Está bien, puede abandonar el chat, mi turno ha finalizado, espero que le haya servido de ayuda, hasta la próxima. ",
+        ];
+
+        function fakeMessage() {
+            if ($(".message-input").val() != "") {
+                return false;
+            }
+            $(
+                '<div class="message loading new"><figure class="avatar"><img src="/logos/sin-fondo.png" /></figure><span></span></div>'
+            ).appendTo($(".mCSB_container"));
+            updateScrollbar();
+
+            setTimeout(function() {
+                $(".message.loading").remove();
+                $(
+                    '<div class="message new"><figure class="avatar"><img src="/logos/sin-fondo.png"/></figure>' +
+                    Fake[i] +
+                    "</div>"
+                )
+                    .appendTo($(".mCSB_container"))
+                    .addClass("new");
+                setDate();
+                updateScrollbar();
+                i++;
+            }, 500 + Math.random() * 20 * 100);
+        }
+
+
+
+    </script>
 {% endblock %}
