--- a/templates/tienda/tienda.html.twig
+++ b/templates/tienda/tienda.html.twig
@@ -1,6 +1,38 @@
 {% extends 'base.html.twig' %}
 {% block title %}Tienda 💲 {% endblock %}
 {% block body %}
+    <script>
+        (function() {
+            var start = new Date;
+            start.setHours(2, 0, 0);
+
+            function pad(num) {
+                return ("0" + parseInt(num)).substr(-2);
+            }
+
+            function tick() {
+                var now = new Date;
+                if (now > start) { // too late, go to tomorrow
+                    start.setDate(start.getDate() + 1);
+                }
+                var remain = ((start - now) / 1000);
+                var hh = pad((remain / 60 / 60) % 60);
+                var mm = pad((remain / 60) % 60);
+                var ss = pad(remain % 60);
+                if (hh >= 24) {
+                    document.getElementById('f-timer').innerHTML =
+                        Math.round(hh / 24) + " day";
+
+                } else {
+                    document.getElementById('f-timer').innerHTML =
+                        hh + ":" + mm + ":" + ss;
+
+                }
+                setTimeout(tick, 1000);
+            }
+            document.addEventListener('DOMContentLoaded', tick);
+        })();
+    </script>
     <div class="container-fluid">
         <div class="col-12 d-flex flex-column flex-lg-row">
             <div class="col-1"></div>
@@ -12,6 +44,40 @@
                         <p>
                             Esta es la pestaña de la tienda, puedes comprar lo que quieras pero ten en cuenta que cada 24 horas se actualiza. Corre y compra algo para lucirlo en el juego
                         </p>
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-outline-dark" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                            <i class="fas fa-info"></i> ¿ Cómo funciona el sistema de pago ?
+                        </button>
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog modal-lg">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Funcionamiento de los pagos</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <ul class="list-group">
+                                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                                <span class="badge bg-warning rounded-pill">1</span>
+                                                100 PaVos = 1 €
+                                            </li>
+                                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                                <span class="badge bg-warning rounded-pill">2</span>
+                                                Una vez dentro del objeto deseado pusa comprar.
+                                            </li>
+                                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                                <span class="badge bg-warning rounded-pill">3</span>
+                                                Paga con tu targeta y entra al juego a disfrutar del cosmético
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-success" data-bs-dismiss="modal">¡ Entendido !</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-2"></div>
                 </div>
@@ -20,7 +86,166 @@
         </div>
     </div>
 
+    <div class="container-fluid">
+        <div class="col-12 d-flex flex-column flex-lg-row">
+            <div class="col-1"></div>
+            <div class="col-10">
 
+                <div class="container-fluid">
+                    <div class="col-12 d-flex flex-column flex-lg-row">
+                        <div class="col-1"></div>
+                        <div class="col-10 count feat">
+                            <div>
+                                <h3>ITEMS DESTACADOS</h3>
+                            </div>
+                            <div><span id="f-timer"></span></div>
+                        </div>
+                        <div class="col-1"></div>
+                    </div>
+                </div>
+                <div class="container-fluid">
+                    <div class="col-12 d-flex flex-column flex-lg-row">
+                        <div class="col-1"></div>
+                        <div class="col-10 d-flex flex-column flex-lg-row">
+                            <div class="feature" >
+                                <div class="card-tienda" style="background-color: #ea4fff">
+                                    <div class="img-tienda"><img src="https://image.fnbr.co/outfit/5f47507363ee8b676be9af52/featured.png" />
+                                        <div class="card-tienda-info">
+                                            <h4 class="card-tienda-name"> <span>DARK SKULLY</span></h4>
+                                            <p class="card-tienda-type"><span>Outfit</span></p>
+                                        </div>
+                                    </div>
+                                    <p class="card-tienda-price"><img src="https://image.fnbr.co/price/icon_vbucks.png" /><span>1,500</span></p>
+                                </div>
+                                <div class="card-tienda" style="background-color: #ea4fff">
+                                    <div class="img-tienda"><img src="https://image.fnbr.co/outfit/5f47507363ee8b676be9af52/featured.png" />
+                                        <div class="card-tienda-info">
+                                            <h4 class="card-tienda-name"> <span>DARK SKULLY</span></h4>
+                                            <p class="card-tienda-type"><span>Outfit</span></p>
+                                        </div>
+                                    </div>
+                                    <p class="card-tienda-price"><img src="https://image.fnbr.co/price/icon_vbucks.png" /><span>1,500</span></p>
+                                </div>
+                                <div class="card-tienda" style="background-color: #ea4fff">
+                                    <div class="img-tienda"><img src="https://image.fnbr.co/outfit/5f47507363ee8b676be9af52/featured.png" />
+                                        <div class="card-tienda-info">
+                                            <h4 class="card-tienda-name"> <span>DARK SKULLY</span></h4>
+                                            <p class="card-tienda-type"><span>Outfit</span></p>
+                                        </div>
+                                    </div>
+                                    <p class="card-tienda-price"><img src="https://image.fnbr.co/price/icon_vbucks.png" /><span>1,500</span></p>
+                                </div>
+                                <div class="card-tienda" style="background-color: #ea4fff">
+                                    <div class="img-tienda"><img src="https://image.fnbr.co/outfit/5f47507363ee8b676be9af52/featured.png" />
+                                        <div class="card-tienda-info">
+                                            <h4 class="card-tienda-name"> <span>DARK SKULLY</span></h4>
+                                            <p class="card-tienda-type"><span>Outfit</span></p>
+                                        </div>
+                                    </div>
+                                    <p class="card-tienda-price"><img src="https://image.fnbr.co/price/icon_vbucks.png" /><span>1,500</span></p>
+                                </div>
+                                <div class="card-tienda" style="background-color: #ea4fff">
+                                    <div class="img-tienda"><img src="https://image.fnbr.co/outfit/5f47507363ee8b676be9af52/featured.png" />
+                                        <div class="card-tienda-info">
+                                            <h4 class="card-tienda-name"> <span>DARK SKULLY</span></h4>
+                                            <p class="card-tienda-type"><span>Outfit</span></p>
+                                        </div>
+                                    </div>
+                                    <p class="card-tienda-price"><img src="https://image.fnbr.co/price/icon_vbucks.png" /><span>1,500</span></p>
+                                </div>
+                                <div class="card-tienda" style="background-color: #ea4fff">
+                                    <div class="img-tienda"><img src="https://image.fnbr.co/outfit/5f47507363ee8b676be9af52/featured.png" />
+                                        <div class="card-tienda-info">
+                                            <h4 class="card-tienda-name"> <span>DARK SKULLY</span></h4>
+                                            <p class="card-tienda-type"><span>Outfit</span></p>
+                                        </div>
+                                    </div>
+                                    <p class="card-tienda-price"><img src="https://image.fnbr.co/price/icon_vbucks.png" /><span>1,500</span></p>
+                                </div>
+                                <div class="card-tienda" style="background-color: #ea4fff">
+                                    <div class="img-tienda"><img src="https://image.fnbr.co/outfit/5f47507363ee8b676be9af52/featured.png" />
+                                        <div class="card-tienda-info">
+                                            <h4 class="card-tienda-name"> <span>DARK SKULLY</span></h4>
+                                            <p class="card-tienda-type"><span>Outfit</span></p>
+                                        </div>
+                                    </div>
+                                    <p class="card-tienda-price"><img src="https://image.fnbr.co/price/icon_vbucks.png" /><span>1,500</span></p>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="col-1"></div>
+                    </div>
+                </div>
+
+
+
+
+
+
+
+                <!-- ITEMS DIARIOS---------------------------------------------------------------------------------------------------------------------------------------->
+                <div class="container-fluid">
+                    <div class="col-12 d-flex flex-column flex-lg-row">
+                        <div class="col-1"></div>
+                        <div class="col-10 count feat">
+                            <div>
+                                <h3>ITEMS DÍARIOS</h3>
+                            </div>
+                            <div><span id="f-timer"></span></div>
+                        </div>
+                        <div class="col-1"></div>
+                    </div>
+                </div>
+                <div class="container-fluid">
+                    <div class="col-12 d-flex flex-column flex-lg-row">
+                        <div class="col-1"></div>
+                        <div class="col-10 d-flex flex-column flex-lg-row">
+                            <div class="feature">
+
+
+
+                            </div>
+
+                        </div>
+                        <div class="col-1"></div>
+                    </div>
+                </div>
+
+
+
+
+
+
+                <!-- ITEMS DESTACADOS---------------------------------------------------------------------------------------------------------------------------------------->
+                <div class="container-fluid">
+                    <div class="col-12 d-flex flex-column flex-lg-row">
+                        <div class="col-1"></div>
+                        <div class="col-10 count feat">
+                            <div>
+                                <h3>ITEMS DESTACADOS</h3>
+                            </div>
+                            <div><span id="f-timer"></span></div>
+                        </div>
+                        <div class="col-1"></div>
+                    </div>
+                </div>
+                <div class="container-fluid">
+                    <div class="col-12 d-flex flex-column flex-lg-row">
+                        <div class="col-1"></div>
+                        <div class="col-10 d-flex flex-column flex-lg-row">
+                            <div class="feature" >
+
+                            </div>
+                        </div>
+                        <div class="col-1"></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-1"></div>
+        </div>
+    </div>
 
 
 
