--- a/templates/tienda/pay.html.twig
+++ b/templates/tienda/pay.html.twig
@@ -16,7 +16,7 @@
             margin-right: 0.4rem;
         }
     </style>
-    <body>
+    <body id="body-pay">
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 d-flex flex-column flex-lg-row">
