--- a/templates/torneo/index.html.twig
+++ b/templates/torneo/index.html.twig
@@ -4,8 +4,8 @@
     <div class="container mt-2">
         <div class="row">
             <nav class="navbar navbar-expand-lg navbar-light bg-light" id="buscador">
-                <div class="col-12 container-fluid">
-                    <div class="col-6 d-flex text-center">
+                <div class="col-12 d-flex flex-column flex-lg-row container-fluid">
+                    <div class="col-6 text-center">
                         <form method="get" class="row">
                             <div class="col-10 collapse navbar-collapse">
                                 <select name="categoria" class="form-select" aria-label="Default select example">
@@ -23,9 +23,9 @@
                             </div>
                         </form>
                     </div>
-                    <div class="col-6 d-flex text-center">
+                    <div class="col-6 text-center">
                         <form method="get">
-                            <div class="col-12 d-flex">
+                            <div class="col-12 fechas d-flex">
                                 <input name="data" type="date" class="form-control col-5 campo-fecha mt-3">
                                 <input name="data2" type="date" class="form-control col-5 campo-fecha mt-3">
                                 <div class="col-2 d-flex text-end">
