--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,6 +28,7 @@
     {% block javascripts %}
         <script src="{{ asset('/js/chat.js') }}"></script>
         <script src="{{ asset('/js/tienda/pago.js') }}"></script>
+        <script src="{{ asset('/js/tienda/tienda.js') }}"></script>
         <script src="{{ asset('/js/stats.js') }}"></script>
         <script src="{{ asset('/js/config.js') }}"></script>
         <script src="{{ asset('/js/Cosmeticos/cosmeticos.js') }}"></script>
