--- a/templates/contact/chat.html.twig
+++ b/templates/contact/chat.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <body id="body-chat">
 <div class="container-fluid">
-    <div class="row row-chat">
+    <div class="row row-chat mb-5">
         <div class="col-6 d-flex flex-column flex-lg-row ">
             <div class="chat">
                 <div class="chat-title">
