--- a/templates/intro.html.twig
+++ b/templates/intro.html.twig
@@ -13,7 +13,7 @@
             </a></h4>
         <div  class="scene">
             <div class="device__wrapper">
-                <div class="device">
+                <div class="dispositivo">
                     <div class="device__webcam"></div>
                     <div class="device__screen"></div>
                     <svg class="cat" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 23 24">
@@ -53,7 +53,7 @@
                 </div>
                 <div class="text__quote text--expand">
 
-                </div><a  class="text__link text--expand text-dark">www.<span class="text--color">torneind</span>.com</a>
+                </div><h5  class="text__link text--expand text-dark"> ¡Mas que<span class="text--color"> competir!</span></h5>
             </div>
         </div>
 
