--- a/templates/tienda/tienda.html.twig
+++ b/templates/tienda/tienda.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block title %}Tienda 💲 {% endblock %}
 {% block body %}
+
     <script>
         (function() {
             var start = new Date;
@@ -19,15 +20,21 @@
                 var hh = pad((remain / 60 / 60) % 60);
                 var mm = pad((remain / 60) % 60);
                 var ss = pad(remain % 60);
+
                 if (hh >= 24) {
+
                     document.getElementById('f-timer').innerHTML =
                         Math.round(hh / 24) + " day";
-
                 } else {
                     document.getElementById('f-timer').innerHTML =
                         hh + ":" + mm + ":" + ss;
 
                 }
+
+                if(hh == 00 && mm == 00 && ss == 00){
+                    location.reload();
+                }
+
                 setTimeout(tick, 1000);
             }
             document.addEventListener('DOMContentLoaded', tick);
@@ -59,16 +66,13 @@
                                     <div class="modal-body">
                                         <ul class="list-group">
                                             <li class="list-group-item d-flex justify-content-between align-items-center">
-                                                <span class="badge bg-warning rounded-pill">1</span>
-                                                100 PaVos = 1 €
+                                                <span class="badge bg-warning rounded-pill">1</span> 100 PaVos = 1 €
                                             </li>
                                             <li class="list-group-item d-flex justify-content-between align-items-center">
-                                                <span class="badge bg-warning rounded-pill">2</span>
-                                                Una vez dentro del objeto deseado pusa comprar.
+                                                <span class="badge bg-warning rounded-pill">2</span> Una vez dentro del objeto deseado pusa comprar.
                                             </li>
                                             <li class="list-group-item d-flex justify-content-between align-items-center">
-                                                <span class="badge bg-warning rounded-pill">3</span>
-                                                Paga con tu targeta y entra al juego a disfrutar del cosmético
+                                                <span class="badge bg-warning rounded-pill">3</span> Paga con tu targeta y entra al juego a disfrutar del cosmético
                                             </li>
                                         </ul>
                                     </div>
@@ -96,7 +100,7 @@
                         <div class="col-1"></div>
                         <div class="col-10 count feat">
                             <div>
-                                <h3>ITEMS DESTACADOS</h3>
+                                <h3>ITEMS DIARIOS</h3>
                             </div>
                             <div><span id="f-timer"></span></div>
                         </div>
@@ -107,9 +111,13 @@
                     <div class="col-12 d-flex flex-column flex-lg-row">
                         <div class="col-1"></div>
                         <div class="col-10 d-flex flex-column flex-lg-row">
-                            <div class="feature" >
+                            <div class="feature" id="diarios-content">
+
+
+                                <!-- Elemento tienda -->
                                 <div class="card-tienda" style="background-color: #ea4fff">
-                                    <div class="img-tienda"><img src="https://image.fnbr.co/outfit/5f47507363ee8b676be9af52/featured.png" />
+                                    <div class="img-tienda">
+                                        <img src="https://image.fnbr.co/outfit/5f47507363ee8b676be9af52/featured.png" />
                                         <div class="card-tienda-info">
                                             <h4 class="card-tienda-name"> <span>DARK SKULLY</span></h4>
                                             <p class="card-tienda-type"><span>Outfit</span></p>
@@ -117,60 +125,10 @@
                                     </div>
                                     <p class="card-tienda-price"><img src="https://image.fnbr.co/price/icon_vbucks.png" /><span>1,500</span></p>
                                 </div>
-                                <div class="card-tienda" style="background-color: #ea4fff">
-                                    <div class="img-tienda"><img src="https://image.fnbr.co/outfit/5f47507363ee8b676be9af52/featured.png" />
-                                        <div class="card-tienda-info">
-                                            <h4 class="card-tienda-name"> <span>DARK SKULLY</span></h4>
-                                            <p class="card-tienda-type"><span>Outfit</span></p>
-                                        </div>
-                                    </div>
-                                    <p class="card-tienda-price"><img src="https://image.fnbr.co/price/icon_vbucks.png" /><span>1,500</span></p>
-                                </div>
-                                <div class="card-tienda" style="background-color: #ea4fff">
-                                    <div class="img-tienda"><img src="https://image.fnbr.co/outfit/5f47507363ee8b676be9af52/featured.png" />
-                                        <div class="card-tienda-info">
-                                            <h4 class="card-tienda-name"> <span>DARK SKULLY</span></h4>
-                                            <p class="card-tienda-type"><span>Outfit</span></p>
-                                        </div>
-                                    </div>
-                                    <p class="card-tienda-price"><img src="https://image.fnbr.co/price/icon_vbucks.png" /><span>1,500</span></p>
-                                </div>
-                                <div class="card-tienda" style="background-color: #ea4fff">
-                                    <div class="img-tienda"><img src="https://image.fnbr.co/outfit/5f47507363ee8b676be9af52/featured.png" />
-                                        <div class="card-tienda-info">
-                                            <h4 class="card-tienda-name"> <span>DARK SKULLY</span></h4>
-                                            <p class="card-tienda-type"><span>Outfit</span></p>
-                                        </div>
-                                    </div>
-                                    <p class="card-tienda-price"><img src="https://image.fnbr.co/price/icon_vbucks.png" /><span>1,500</span></p>
-                                </div>
-                                <div class="card-tienda" style="background-color: #ea4fff">
-                                    <div class="img-tienda"><img src="https://image.fnbr.co/outfit/5f47507363ee8b676be9af52/featured.png" />
-                                        <div class="card-tienda-info">
-                                            <h4 class="card-tienda-name"> <span>DARK SKULLY</span></h4>
-                                            <p class="card-tienda-type"><span>Outfit</span></p>
-                                        </div>
-                                    </div>
-                                    <p class="card-tienda-price"><img src="https://image.fnbr.co/price/icon_vbucks.png" /><span>1,500</span></p>
-                                </div>
-                                <div class="card-tienda" style="background-color: #ea4fff">
-                                    <div class="img-tienda"><img src="https://image.fnbr.co/outfit/5f47507363ee8b676be9af52/featured.png" />
-                                        <div class="card-tienda-info">
-                                            <h4 class="card-tienda-name"> <span>DARK SKULLY</span></h4>
-                                            <p class="card-tienda-type"><span>Outfit</span></p>
-                                        </div>
-                                    </div>
-                                    <p class="card-tienda-price"><img src="https://image.fnbr.co/price/icon_vbucks.png" /><span>1,500</span></p>
-                                </div>
-                                <div class="card-tienda" style="background-color: #ea4fff">
-                                    <div class="img-tienda"><img src="https://image.fnbr.co/outfit/5f47507363ee8b676be9af52/featured.png" />
-                                        <div class="card-tienda-info">
-                                            <h4 class="card-tienda-name"> <span>DARK SKULLY</span></h4>
-                                            <p class="card-tienda-type"><span>Outfit</span></p>
-                                        </div>
-                                    </div>
-                                    <p class="card-tienda-price"><img src="https://image.fnbr.co/price/icon_vbucks.png" /><span>1,500</span></p>
-                                </div>
+
+
+
+
                             </div>
 
                         </div>
@@ -183,7 +141,7 @@
                         <div class="col-1"></div>
                         <div class="col-10 count feat">
                             <div>
-                                <h3>ITEMS DÍARIOS</h3>
+                                <h3>ITEMS DESTACADOS</h3>
                             </div>
                             <div><span id="f-timer"></span></div>
                         </div>
@@ -194,7 +152,7 @@
                     <div class="col-12 d-flex flex-column flex-lg-row">
                         <div class="col-1"></div>
                         <div class="col-10 d-flex flex-column flex-lg-row">
-                            <div class="feature">
+                            <div class="feature" id="destacados-content">
 
 
 
@@ -216,7 +174,7 @@
                         <div class="col-1"></div>
                         <div class="col-10 count feat">
                             <div>
-                                <h3>ITEMS DESTACADOS</h3>
+                                <h3>ITEMS ESPECIALES</h3>
                             </div>
                             <div><span id="f-timer"></span></div>
                         </div>
@@ -227,7 +185,10 @@
                     <div class="col-12 d-flex flex-column flex-lg-row">
                         <div class="col-1"></div>
                         <div class="col-10 d-flex flex-column flex-lg-row">
-                            <div class="feature" >
+                            <div class="feature" id="especiales-content">
+
+
+
 
                             </div>
                         </div>
@@ -239,7 +200,5 @@
             <div class="col-1"></div>
         </div>
     </div>
-
-
-
+    <script src="{{ asset('/js/tienda/tienda.js') }}"></script>
 {% endblock %}
