--- a/templates/intro.html.twig
+++ b/templates/intro.html.twig
@@ -49,7 +49,7 @@
             </div>
             <div class="text__wrapper">
                 <div class="text">
-                    <div class="text--color">torn</div>eind
+                    torn  <div class="text--color">eind</div>
                 </div>
                 <div class="text__quote text--expand">
 
