--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -2593,6 +2593,55 @@ p.card-tienda-price>img {
     height: 500px !important;
 }
 
+.button-wrapper {
+    height: 100px;
+    width: 300px;
+    background: linear-gradient(#4f81ff, #009ed7);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 15px;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.button-wrapper:hover {
+    transform: scale(1.1);
+    box-shadow: 0px 4px 15px 0px rgba(17, 17, 17, 0.8);
+}
+
+.button-wrapper .button-inner {
+    height: 75%;
+    width: 90%;
+    background: linear-gradient(#73ffe9, #4f81ff);
+    transform: skew(-5deg);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.button-wrapper .button-inner p {
+    font-size: 3rem;
+    color: #ffffff;
+    margin: 15px 0 0 0;
+}
+
+.description {
+    position: absolute;
+    top: 70px;
+    width: 100vw;
+    text-align: center;
+    color: #fff;
+    letter-spacing: 1px;
+}
+
+.description h1 {
+    font-size: 3rem;
+    margin: 0;
+}
+
+
+
 
 
 
