--- a/templates/tienda/tienda.html.twig
+++ b/templates/tienda/tienda.html.twig
@@ -66,18 +66,18 @@
                                     <div class="modal-body">
                                         <ul class="list-group">
                                             <li class="list-group-item d-flex justify-content-between align-items-center">
-                                                <span class="badge bg-warning rounded-pill">1</span> 100 PaVos = 1 €
+                                                <span class="badge bg-dark rounded-pill">1</span> 100 PaVos = 1 €
                                             </li>
                                             <li class="list-group-item d-flex justify-content-between align-items-center">
-                                                <span class="badge bg-warning rounded-pill">2</span> Una vez dentro del objeto deseado pusa comprar.
+                                                <span class="badge bg-dark rounded-pill">2</span> Una vez dentro del objeto deseado pusa comprar.
                                             </li>
                                             <li class="list-group-item d-flex justify-content-between align-items-center">
-                                                <span class="badge bg-warning rounded-pill">3</span> Paga con tu targeta y entra al juego a disfrutar del cosmético
+                                                <span class="badge bg-dark rounded-pill">3</span> Paga con tu targeta y entra al juego a disfrutar del cosmético
                                             </li>
                                         </ul>
                                     </div>
                                     <div class="modal-footer">
-                                        <button type="button" class="btn btn-success" data-bs-dismiss="modal">¡ Entendido !</button>
+                                        <button type="button" class="btn btn-outline-dark" data-bs-dismiss="modal">¡ Entendido !</button>
                                     </div>
                                 </div>
                             </div>
@@ -115,16 +115,7 @@
 
 
                                 <!-- Elemento tienda -->
-                                <div class="card-tienda" style="background-color: #ea4fff">
-                                    <div class="img-tienda">
-                                        <img src="https://image.fnbr.co/outfit/5f47507363ee8b676be9af52/featured.png" />
-                                        <div class="card-tienda-info">
-                                            <h4 class="card-tienda-name"> <span>DARK SKULLY</span></h4>
-                                            <p class="card-tienda-type"><span>Outfit</span></p>
-                                        </div>
-                                    </div>
-                                    <p class="card-tienda-price"><img src="https://image.fnbr.co/price/icon_vbucks.png" /><span>1,500</span></p>
-                                </div>
+
 
 
 
