--- a/templates/tienda/compra_ok.html.twig
+++ b/templates/tienda/compra_ok.html.twig
@@ -4,18 +4,18 @@
     <head>
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:300|Montserrat' rel='stylesheet' type='text/css'>
     </head>
-    <body>
+    <body id="compra-ok">
     <div class="container-fluid">
         <div class="row row-compra-ok">
             <div class="container">
                 <div class="row">
-                    <div class="modalbox success col-sm-8 col-md-6 col-lg-5 center animate">
+                    <div class="modalbox success col-sm-8 col-md-6 col-lg-5 center animate" >
                         <div class="icon">
-                            <i class="fas fa-check-circle glyphicon-ok"></i>
+                            <i class="fas fa-check-circle icon-ok"></i>
                         </div>
                         <h1 class="compra-succses">COMPRA CORRECTA</h1>
                         <p> En breves recibirás un email de confirmación</p>
-                       <a href="{{ path('tienda') }}"><button href="#" role="button" class="redo btn">Oki !</button> </a>
+                       <a href="{{ path('tienda') }}"><button role="button" class="redo btn">Oki !</button> </a>
                     </div>
                 </div>
             </div>
